test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/cluster-policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
    name: external-metrics-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
