test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/keda-ready.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-metrics-apiserver
  namespace: keda
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: scaledobjects.keda.sh
---
apiVersion: apiregistration.k8s.io/v1
kind: APIService
metadata:
  name: v1beta1.external.metrics.k8s.io
