test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
    name: external-metrics-policy-default
    namespace: default
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
