test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/00-keda.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: keda
spec:
  timeouts: {}
  try:
  - apply:
      file: keda.yaml
  - assert:
      file: keda-ready.yaml
