test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/01-cluster-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cluster-policy
spec:
  timeouts: {}
  try:
  - apply:
      file: cluster-policy.yaml
  - assert:
      file: cluster-policy-ready.yaml
