test/conformance/chainsaw/validate/clusterpolicy/cornercases/external-metrics/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: external-metrics
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - apply:
        file: keda.yaml
    - assert:
        file: keda-ready.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: external-metrics-policy
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: external-metrics-policy-default
        - name: namespace
          value: default
